# informative_path_planning

ppas/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  rosdep.yaml  setup.py
ppas/scripts/: plot_eco.py  test_roms.py  time_test.py
ppas/src/ppas/: __init__.py  asamp.py  bnb.py  bnb_multi.py  convenience.py  dbg.py  ecomapper.py  gaussian.py  glider.py  graph.py  graph_movie.py  kml.py  mpl.py  objectives.py  plot.py  pointset.py  pplan.py  roms.py  rrt.py  store.py  util.py
ppas/src/ppas/gp/: __init__.py  kernels.py
pplan/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
pplan/doc/: installation
pplan/glade/: pplan_gui.glade
pplan/notes/: dockserver_packets
pplan/scripts/: advected_cov.py  advection_anim.py  buildgraph.py  check_roms_tz.py  check_stationarity.py  chol_times.py  cmd.py  display.py  ds.py  eco_learn_params.py  eco_train.py  empirical_cov.py  explore_cov.py  get_historical_data.py  getncd.py  glider_alarm.py  gp_kernel.py  gui.py  loadall.py  loadgraph.py  make_geoff_graph.py  make_lawnmower.py  makegraph.py  makegrid.py  output_kml.py  picktest.py  plan_depth_transect.py  planpath.py  plot_cov.py  plot_depth_path.py  plot_depth_transect.py  plot_mimse.py  plot_multiple_roms.py  plot_temp.py  plot_transect_kmat.py  plotexp.py  plotpath.py  plotroms.py  save.py  show.py  (+6 more)
pplan/src/pplan/: __init__.py  covariance_trainer.py  graph_maker.py  gtk_outputter.py  makegraph_edgetime_equilateral.py  makegraph_static_equilateral.py  makegraph_static_square.py  path_planner.py  roms_downloader.py  settings.py
